# docker-compose-test

./: README.md  api-with-poetry.md  app.py  compose.yaml  fastapi.Dockerfile  multi-git-setup.md  pyproject.toml  run.sh
fast-api/: main.py
